remove exposed key

--- a/WeatherPy.ipynb
+++ b/WeatherPy.ipynb
@@ -3960,21 +3960,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "http://api.openweathermap.org/data/2.5/weather?units=Imperial&APPID=1a58b5f79e402976b966bd7cf6ef80bb\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Starting URL for Weather Map API Call.\n",
-    "url = \"http://api.openweathermap.org/data/2.5/weather?units=Imperial&APPID=\" + weather_api_key\n",
-    "print(url)"
+    "url = \"http://api.openweathermap.org/data/2.5/weather?units=Imperial&APPID=\" + weather_api_key"
    ]
   },
   {
