--- a/WeatherPy.ipynb
+++ b/WeatherPy.ipynb
@@ -5756,11 +5756,233 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# gmaps"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import the dependencies.\n",
+    "import pandas as pd\n",
+    "import gmaps\n",
+    "import requests\n",
+    "# Import the API key.\n",
+    "from config import g_key\n",
+    "# Configure gmaps to use your Google API key.\n",
+    "gmaps.configure(api_key=g_key)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>City_ID</th>\n",
+       "      <th>City</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Lng</th>\n",
+       "      <th>Max Temp</th>\n",
+       "      <th>Humidity</th>\n",
+       "      <th>Cloudiness</th>\n",
+       "      <th>Wind Speed</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Carnarvon</td>\n",
+       "      <td>AU</td>\n",
+       "      <td>2021-02-24 16:24:47</td>\n",
+       "      <td>-24.8667</td>\n",
+       "      <td>113.6333</td>\n",
+       "      <td>86.0</td>\n",
+       "      <td>48</td>\n",
+       "      <td>0</td>\n",
+       "      <td>18.41</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Hobart</td>\n",
+       "      <td>AU</td>\n",
+       "      <td>2021-02-24 16:24:47</td>\n",
+       "      <td>-42.8794</td>\n",
+       "      <td>147.3294</td>\n",
+       "      <td>57.2</td>\n",
+       "      <td>62</td>\n",
+       "      <td>100</td>\n",
+       "      <td>10.36</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Olinda</td>\n",
+       "      <td>BR</td>\n",
+       "      <td>2021-02-24 16:24:47</td>\n",
+       "      <td>-8.0089</td>\n",
+       "      <td>-34.8553</td>\n",
+       "      <td>84.2</td>\n",
+       "      <td>65</td>\n",
+       "      <td>40</td>\n",
+       "      <td>11.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Georgetown</td>\n",
+       "      <td>MY</td>\n",
+       "      <td>2021-02-24 16:23:49</td>\n",
+       "      <td>5.4112</td>\n",
+       "      <td>100.3354</td>\n",
+       "      <td>84.2</td>\n",
+       "      <td>70</td>\n",
+       "      <td>20</td>\n",
+       "      <td>3.44</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Mahebourg</td>\n",
+       "      <td>MU</td>\n",
+       "      <td>2021-02-24 16:24:08</td>\n",
+       "      <td>-20.4081</td>\n",
+       "      <td>57.7000</td>\n",
+       "      <td>78.8</td>\n",
+       "      <td>73</td>\n",
+       "      <td>75</td>\n",
+       "      <td>6.91</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   City_ID        City Country                 Date      Lat       Lng  \\\n",
+       "0        0   Carnarvon      AU  2021-02-24 16:24:47 -24.8667  113.6333   \n",
+       "1        1      Hobart      AU  2021-02-24 16:24:47 -42.8794  147.3294   \n",
+       "2        2      Olinda      BR  2021-02-24 16:24:47  -8.0089  -34.8553   \n",
+       "3        3  Georgetown      MY  2021-02-24 16:23:49   5.4112  100.3354   \n",
+       "4        4   Mahebourg      MU  2021-02-24 16:24:08 -20.4081   57.7000   \n",
+       "\n",
+       "   Max Temp  Humidity  Cloudiness  Wind Speed  \n",
+       "0      86.0        48           0       18.41  \n",
+       "1      57.2        62         100       10.36  \n",
+       "2      84.2        65          40       11.50  \n",
+       "3      84.2        70          20        3.44  \n",
+       "4      78.8        73          75        6.91  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Store the CSV you saved created in part one into a DataFrame.\n",
+    "city_data_df = pd.read_csv(\"weather_data/cities.csv\")\n",
+    "city_data_df.head()\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Create a Maximum Temperature Heatmap\n",
+    "# # 1. Assign the locations to an array of latitude and longitude pairs.\n",
+    "# locations = [latitude, longitude]\n",
+    "# # 2. Assign the weights variable to some values.\n",
+    "# temperatures = # an array of length equal to the locations array length\n",
+    "# # 3. Assign the figure variable to the gmaps.figure() attribute.\n",
+    "# fig = gmaps.figure()\n",
+    "# # 4. Assign the heatmap_layer variable to the heatmap_layer attribute and add in the locations.\n",
+    "# heatmap_layer = gmaps.heatmap_layer(locations, weights=temperatures)\n",
+    "\n",
+    "# # 5. Add the heatmap layer.\n",
+    "# fig.add_layer(heatmap_layer)\n",
+    "# # 6. Call the figure to plot the data.\n",
+    "# fig\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Heatmap of temperature\n",
+    "# Get the latitude and longitude.\n",
+    "locations = city_data_df[[\"Lat\", \"Lng\"]]\n",
+    "# Get the maximum temperature.\n",
+    "max_temp = city_data_df[\"Max Temp\"]\n",
+    "temps = []\n",
+    "for temp in max_temp:\n",
+    "    temps.append(max(temp, 0))\n",
+    "# Assign the figure variable.\n",
+    "fig = gmaps.figure()\n",
+    "# Assign the heatmap variable.\n",
+    "heat_layer = gmaps.heatmap_layer(locations, weights=temps, dissipating=False, max_intensity=300, point_radius=4)\n",
+    "# Add the heatmap layer.\n",
+    "fig.add_layer(heat_layer)\n",
+    "# Call the figure to plot the data.\n",
+    "fig"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Create a Percent Humidity Heatmap\n",
+    "# Heatmap of percent humidity\n",
+    "locations = city_data_df[[\"Lat\", \"Lng\"]]\n",
+    "humidity = city_data_df[\"Humidity\"]\n",
+    "fig = gmaps.figure(center=(30.0, 31.0), zoom_level=1.5)\n",
+    "heat_layer = gmaps.heatmap_layer(locations, weights=humidity, dissipating=False, max_intensity=300, point_radius=4)\n",
+    "\n",
+    "fig.add_layer(heat_layer)\n",
+    "# Call the figure to plot the data.\n",
+    "fig"
+   ]
   }
  ],
  "metadata": {
