--- a/Vacation_Search /Vacation_Search.ipynb
+++ b/Vacation_Search /Vacation_Search.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,7 @@
        "4           7       13.38           clear sky  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -190,208 +190,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>City_ID</th>\n",
-       "      <th>City</th>\n",
-       "      <th>Country</th>\n",
-       "      <th>Lat</th>\n",
-       "      <th>Lng</th>\n",
-       "      <th>Max Temp</th>\n",
-       "      <th>Humidity</th>\n",
-       "      <th>Cloudiness</th>\n",
-       "      <th>Wind Speed</th>\n",
-       "      <th>Current Description</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>Atuona</td>\n",
-       "      <td>PF</td>\n",
-       "      <td>-9.8000</td>\n",
-       "      <td>-139.0333</td>\n",
-       "      <td>79.93</td>\n",
-       "      <td>75</td>\n",
-       "      <td>7</td>\n",
-       "      <td>13.38</td>\n",
-       "      <td>clear sky</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>6</td>\n",
-       "      <td>Kulhudhuffushi</td>\n",
-       "      <td>MV</td>\n",
-       "      <td>6.6221</td>\n",
-       "      <td>73.0700</td>\n",
-       "      <td>83.08</td>\n",
-       "      <td>68</td>\n",
-       "      <td>78</td>\n",
-       "      <td>9.35</td>\n",
-       "      <td>broken clouds</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>11</td>\n",
-       "      <td>Faanui</td>\n",
-       "      <td>PF</td>\n",
-       "      <td>-16.4833</td>\n",
-       "      <td>-151.7500</td>\n",
-       "      <td>83.25</td>\n",
-       "      <td>70</td>\n",
-       "      <td>96</td>\n",
-       "      <td>1.25</td>\n",
-       "      <td>light rain</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>12</td>\n",
-       "      <td>Rikitea</td>\n",
-       "      <td>PF</td>\n",
-       "      <td>-23.1203</td>\n",
-       "      <td>-134.9692</td>\n",
-       "      <td>78.37</td>\n",
-       "      <td>78</td>\n",
-       "      <td>100</td>\n",
-       "      <td>8.52</td>\n",
-       "      <td>overcast clouds</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>13</td>\n",
-       "      <td>East London</td>\n",
-       "      <td>ZA</td>\n",
-       "      <td>-33.0153</td>\n",
-       "      <td>27.9116</td>\n",
-       "      <td>82.40</td>\n",
-       "      <td>57</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3.44</td>\n",
-       "      <td>clear sky</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>20</td>\n",
-       "      <td>Port Elizabeth</td>\n",
-       "      <td>ZA</td>\n",
-       "      <td>-33.9180</td>\n",
-       "      <td>25.5701</td>\n",
-       "      <td>75.20</td>\n",
-       "      <td>73</td>\n",
-       "      <td>20</td>\n",
-       "      <td>17.27</td>\n",
-       "      <td>few clouds</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>25</td>\n",
-       "      <td>Butaritari</td>\n",
-       "      <td>KI</td>\n",
-       "      <td>3.0707</td>\n",
-       "      <td>172.7902</td>\n",
-       "      <td>81.66</td>\n",
-       "      <td>83</td>\n",
-       "      <td>1</td>\n",
-       "      <td>14.18</td>\n",
-       "      <td>clear sky</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>26</td>\n",
-       "      <td>Souillac</td>\n",
-       "      <td>MU</td>\n",
-       "      <td>-20.5167</td>\n",
-       "      <td>57.5167</td>\n",
-       "      <td>86.00</td>\n",
-       "      <td>62</td>\n",
-       "      <td>40</td>\n",
-       "      <td>12.66</td>\n",
-       "      <td>light rain</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>27</td>\n",
-       "      <td>Avarua</td>\n",
-       "      <td>CK</td>\n",
-       "      <td>-21.2078</td>\n",
-       "      <td>-159.7750</td>\n",
-       "      <td>75.20</td>\n",
-       "      <td>100</td>\n",
-       "      <td>100</td>\n",
-       "      <td>2.30</td>\n",
-       "      <td>overcast clouds</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>29</td>\n",
-       "      <td>Bubaque</td>\n",
-       "      <td>GW</td>\n",
-       "      <td>11.2833</td>\n",
-       "      <td>-15.8333</td>\n",
-       "      <td>78.84</td>\n",
-       "      <td>67</td>\n",
-       "      <td>0</td>\n",
-       "      <td>6.11</td>\n",
-       "      <td>clear sky</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    City_ID            City Country      Lat       Lng  Max Temp  Humidity  \\\n",
-       "4         4          Atuona      PF  -9.8000 -139.0333     79.93        75   \n",
-       "6         6  Kulhudhuffushi      MV   6.6221   73.0700     83.08        68   \n",
-       "11       11          Faanui      PF -16.4833 -151.7500     83.25        70   \n",
-       "12       12         Rikitea      PF -23.1203 -134.9692     78.37        78   \n",
-       "13       13     East London      ZA -33.0153   27.9116     82.40        57   \n",
-       "20       20  Port Elizabeth      ZA -33.9180   25.5701     75.20        73   \n",
-       "25       25      Butaritari      KI   3.0707  172.7902     81.66        83   \n",
-       "26       26        Souillac      MU -20.5167   57.5167     86.00        62   \n",
-       "27       27          Avarua      CK -21.2078 -159.7750     75.20       100   \n",
-       "29       29         Bubaque      GW  11.2833  -15.8333     78.84        67   \n",
-       "\n",
-       "    Cloudiness  Wind Speed Current Description  \n",
-       "4            7       13.38           clear sky  \n",
-       "6           78        9.35       broken clouds  \n",
-       "11          96        1.25          light rain  \n",
-       "12         100        8.52     overcast clouds  \n",
-       "13           0        3.44           clear sky  \n",
-       "20          20       17.27          few clouds  \n",
-       "25           1       14.18           clear sky  \n",
-       "26          40       12.66          light rain  \n",
-       "27         100        2.30     overcast clouds  \n",
-       "29           0        6.11           clear sky  "
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 3. Filter the city_data_df DataFrame using the input statements to create a new DataFrame using the loc method.\n",
     "preferred_cities_df = city_data_df.loc[(city_data_df[\"Max Temp\"] <= max_temp) &\n",
@@ -400,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -597,7 +398,7 @@
        "29           0        6.11           clear sky  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -609,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -628,7 +429,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -640,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -651,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -670,19 +471,19 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# extra print - check no full rows dropped\n",
-    "preferred_cities_df.count()"
+    "clean_df.count()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -846,7 +647,7 @@
        "29             "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -862,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -912,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1076,7 +877,7 @@
        "29                  Casa Dora, Bubaque  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1088,17 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 7. Drop the rows where there is no Hotel Name.\n",
-    "clean_hotel_df = hotel_df.dropna()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1114,7 +905,44 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hotel_df.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 7. Drop the rows where there is no Hotel Name.\n",
+    "clean_hotel_df = hotel_df.dropna()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "City                   162\n",
+       "Country                162\n",
+       "Max Temp               162\n",
+       "Current Description    162\n",
+       "Lat                    162\n",
+       "Lng                    162\n",
+       "Hotel Name             162\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1138,7 +966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1161,13 +989,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "615b1d8526f24ec2bdbcea784321b94a",
+       "model_id": "edfc3df6481b442fb799c90c5b3f5718",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1183,6 +1011,37 @@
     "# 11a. Add a marker layer for each city to the map. \n",
     "locations = hotel_df[[\"Lat\", \"Lng\"]]\n",
     "# max_temp = hotel_df[\"Max Temp\"]\n",
+    "fig = gmaps.figure(center=(30.0, 31.0), zoom_level=2)\n",
+    "\n",
+    "marker_layer = gmaps.marker_layer(locations, info_box_content=hotel_info)\n",
+    "fig.add_layer(marker_layer)\n",
+    "# 11b. Display the figure\n",
+    "fig"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f31ddf2e850f40ad8397ddf0ddb30495",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Figure(layout=FigureLayout(height='420px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# 11a. Add a marker layer for each city to the map. \n",
+    "locations = hotel_df[[\"Lat\", \"Lng\"]]\n",
     "fig = gmaps.figure(center=(30.0, 31.0), zoom_level=1.5)\n",
     "\n",
     "marker_layer = gmaps.marker_layer(locations, info_box_content=hotel_info)\n",
