rename and add dependencies

--- a/Vacation_Itinerary/Vacation_Itinerary.ipynb
+++ b/Vacation_Itinerary/Vacation_Itinerary.ipynb
@@ -17,9 +17,10 @@
     "import pandas as pd\n",
     "import requests\n",
     "import gmaps\n",
+    "import os\n",
     "\n",
     "# Import API key\n",
-    "from config import g_key\n",
+    "g_key=os.environ.get('g_key')\n",
     "\n",
     "# Configure gmaps\n",
     "gmaps.configure(api_key=g_key)"
