--- a/Vacation_Search/Vacation_Search.ipynb
+++ b/Vacation_Search/Vacation_Search.ipynb
@@ -1009,7 +1009,7 @@
    ],
    "source": [
     "# 11a. Add a marker layer for each city to the map. \n",
-    "locations = hotel_df[[\"Lat\", \"Lng\"]]\n",
+    "locations = clean_hotel_df[[\"Lat\", \"Lng\"]]\n",
     "fig = gmaps.figure(center=(30.0, 31.0), zoom_level=1.5)\n",
     "\n",
     "marker_layer = gmaps.marker_layer(locations, info_box_content=hotel_info)\n",
